src/objects/pse__Project_Task__c.object
<CustomObject>
    <customHelpPage>pse__ProjectTaskHelp</customHelpPage>
    <description>Represents a unit or collection of work associated with a project, often tracked for completion with points and for effort with hours. You can associate one or more resources or roles with a project task through corresponding child project task assignments. If configured, resources can enter the number of hours that they have spent on a particular task on the Timecard Entry page, accessed from the Log a Timecard with Task Time link or button. Resources can log Timecards against one or multiple tasks.</description>
    <fields>
        <fullName>pse__Actual_End_Date_Time__c</fullName>
        <inlineHelpText>Date &amp; time of when the task actually ended. When the completed check box was checked</inlineHelpText>
        <label>Actual End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actual_End_Date__c</fullName>
        <formula>DATEVALUE( pse__Actual_End_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date of when the task actually ended. When the completed check box was checked</inlineHelpText>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Hours__c</fullName>
        <inlineHelpText>Hours spent on this task. Rolls up from task time entries on timecards. On parent tasks includes hours from child tasks.</inlineHelpText>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Start_Date_Time__c</fullName>
        <inlineHelpText>Date of when the task actually started. When the started check box was checked</inlineHelpText>
        <label>Actual Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Start_Date__c</fullName>
        <formula>DATEVALUE( pse__Actual_Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date of when the task actually started. When the started check box was checked</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Resources_Long__c</fullName>
        <label>Assigned Resources (Long)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Resources__c</fullName>
        <inlineHelpText>System generated list of assigned resources. The list is generated from Project Task Assignment.</inlineHelpText>
        <label>Assigned Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the task selector on the Time Entry page does not allow adding new task time against this project task.</inlineHelpText>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked if the task has been completed</description>
        <inlineHelpText>Will be checked if the task has been completed</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Do_Not_Auto_Update_Parents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Auto Update Parents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Do_Not_Auto_Update_This_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to bypass automatic updates of auto-calculated fields like dates, % complete, etc</inlineHelpText>
        <label>Do Not Auto Update This Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Duration_Unit__c</fullName>
        <defaultValue>&quot;days&quot;</defaultValue>
        <description>Specifies the units of time used for project tasks. Valid values are hours or days. The default value is days.</description>
        <label>Duration Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date_Time__c</fullName>
        <description>The date &amp; time on which work for this Task is supposed to end.  Timecards may still be entered for a Task after this date as long as it is not closed for time entry.</description>
        <inlineHelpText>The date &amp; time on which work for this Task is supposed to end.  Timecards may still be entered for a Task after this date as long as it is not closed for time entry.</inlineHelpText>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>DATEVALUE(pse__End_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Time_To_Completion__c</fullName>
        <inlineHelpText>Specifies the estimated hours to complete the task.</inlineHelpText>
        <label>Estimated Time To Completion (Task)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__External_Task_ID__c</fullName>
        <description>External Task ID for integration with non-Salesforce task management systems or applications.  Integrations should use this field for the external system ID to maintain integrity and allow upserts.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Task ID for integration with non-Salesforce task management systems or applications.  Integrations should use this field for the external system ID to maintain integrity and allow upserts.</inlineHelpText>
        <label>External Task ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Information__c</fullName>
        <label>Flag - Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Task_Dates_No_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag - Task Dates - No Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Task_Dates_Partial_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag - Task Dates - Partial Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Task_End_Milestone_Bounds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag - Task End - Milestone Bounds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Task_End_Project_Bounds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag - Task End - Project Bounds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Task_Hours_No_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag - Task Hours - No Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Task_Hours_Partial_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag - Task Hours - Partial Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Task_Start_Milestone_Bounds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag - Task Start - Milestone Bounds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Flag_Task_Start_Project_Bounds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag - Task Start  - Project Bounds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Depth__c</fullName>
        <defaultValue>0</defaultValue>
        <description>System field showing the number of Parent Tasks &apos;up the chain&apos; to the Top-level Parent Task.  Top-level Tasks themselves have a Hierarchy Depth of 0, their immediate child Tasks have a Hierarchy Depth of 1, and so on.</description>
        <inlineHelpText>System field showing the number of Parent Tasks &apos;up the chain&apos; to the Top-level Parent Task.  Top-level Tasks themselves have a Hierarchy Depth of 0, their immediate child Tasks have a Hierarchy Depth of 1, and so on.</inlineHelpText>
        <label>Hierarchy Depth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hours_Remaining__c</fullName>
        <formula>IF (
			ISBLANK(pse__Estimated_Time_To_Completion__c),
			IF (pse__Estimated_Hours__c - pse__Actual_Hours__c &lt; 0,
				 0, /* Never allow this field to go below 0 */
				 pse__Estimated_Hours__c - pse__Actual_Hours__c
			),
			pse__Estimated_Time_To_Completion__c
		)</formula>
        <inlineHelpText>The number of hours remaining to complete the task derived from Estimated Time to Completion (Task) when set. Calculated otherwise from estimated hours minus actual hours.</inlineHelpText>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project Milestone that covers this Task.</description>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only milestones for the same project are shown. To display all milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Number_of_Assignments__c</fullName>
        <description>Roll-up summary field totaling the number of Project Task Assignments</description>
        <inlineHelpText>Roll-up summary field totaling the number of Project Task Assignments</inlineHelpText>
        <label>Number of Assignments</label>
        <summaryForeignKey>pse__Project_Task_Assignment__c.pse__Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Order__c</fullName>
        <label>Peer Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task_End_Date_Time__c</fullName>
        <formula>pse__Parent_Task__r.pse__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task_End_Date__c</fullName>
        <description>End date of the current Project Task&apos;s Parent Task</description>
        <formula>pse__Parent_Task__r.pse__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task_Start_Date_Time__c</fullName>
        <formula>pse__Parent_Task__r.pse__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task_Start_Date__c</fullName>
        <description>Formula for the start date of the current Project Task&apos;s Parent Task</description>
        <formula>pse__Parent_Task__r.pse__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup captures Task hierarchies:  sub-Tasks have a Parent Task lookup value for the next higher-level Task in the Task hierarchy.  Note that this is separate and distinct from temporal (dependent/predecessor) relationships between Tasks.</description>
        <inlineHelpText>This lookup captures Task hierarchies:  sub-Tasks have a Parent Task lookup value for the next higher-level Task in the Task hierarchy.  Note that this is separate and distinct from temporal (dependent/predecessor) relationships between Tasks.</inlineHelpText>
        <label>Parent Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Project Tasks (Child Task)</relationshipLabel>
        <relationshipName>Immediate_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Hours__c</fullName>
        <description>Formula field calculated from Actual Hours divided by Estimated Hours multiplied by 100. When a value is set in Estimated Time To Completion (Task), calculated from Actual Hours divided by the sum of Actual Hours and Estimated Time To Completion (Task) multiplied by 100.</description>
        <formula>IF
			( ISBLANK(pse__Estimated_Time_To_Completion__c),
				IF
				( pse__Estimated_Hours__c == 0,
					0, /* 0% on no estimate to match behavior of points */
					pse__Actual_Hours__c/pse__Estimated_Hours__c )
				,
				IF
				( (pse__Estimated_Time_To_Completion__c + pse__Actual_Hours__c == 0),
					0, /* 0% on no estimate to match behavior of points */
					(pse__Actual_Hours__c/(pse__Estimated_Time_To_Completion__c + pse__Actual_Hours__c)) ))</formula>
        <label>Percent Complete (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Complete (Points)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Complete (Tasks)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Points_Baseline__c</fullName>
        <label>Points Baseline</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Points_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of points completed</inlineHelpText>
        <label>Points Complete</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Points_Remaining__c</fullName>
        <formula>pse__Points__c - pse__Points_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Points__c</fullName>
        <label>Points</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Priority__c</fullName>
        <description>Pick list that may be customized to reflect possible priority levels that can be associated with Project Tasks.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
                <value>
                    <fullName>P5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project that the Task is a part of.</description>
        <inlineHelpText>You do not have to define the Project field when creating a child task. The Project field auto-populates from the parent task and overwrites any entered value.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Projected_Hours__c</fullName>
        <formula>IF (ISBLANK(pse__Estimated_Time_To_Completion__c), pse__Estimated_Hours__c, pse__Actual_Hours__c  +  pse__Estimated_Time_To_Completion__c)</formula>
        <inlineHelpText>Formula field. The sum of Actual Hours and Estimated Time to Completion (Task). When Estimated Time to Completion (Task) is blank, Projected Hours is Estimated Hours.</inlineHelpText>
        <label>Projected Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date_Time__c</fullName>
        <description>The date &amp; time on which work for this Task is supposed to start.  Timecards may still be entered for a Task before this date as long as it is not closed for time entry.</description>
        <inlineHelpText>The date &amp; time on which work for this Task is supposed to start.  Timecards may still be entered for a Task before this date as long as it is not closed for time entry.</inlineHelpText>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>DATEVALUE(pse__Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Started__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked if the task has been started</description>
        <inlineHelpText>Will be checked if the task has been started</inlineHelpText>
        <label>Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>Pick list for Project Task status that may be customized as needed for possible Task status values</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated if this is a task that has children. If summary task values and time should be rolled up from sub tasks. Values should not be entered directly for this task</description>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Synchronize_Milestone_And_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the related milestone target date and the task end date will be synchronized when modified in Gantt.</description>
        <inlineHelpText>When selected, the related milestone target date and the task end date will be synchronized when modified in Gantt.</inlineHelpText>
        <label>Synchronize Milestone and Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_ID_Chain__c</fullName>
        <description>System field showing the delimited list of Parent Task IDs &apos;up the chain&apos; to the Top-level Parent Task.  Top-level Parent Tasks will have a Task ID Chain value equal to their own ID.  Their immediate child Tasks will have a Task ID Chain value equal to their own ID, then the ID of their Parent Task, and so on.</description>
        <inlineHelpText>System field showing the delimited list of Parent Task IDs &apos;up the chain&apos; to the Top-level Parent Task.</inlineHelpText>
        <label>Task ID Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Task_Key_Chain__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Task Key Chain</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Task_Key__c</fullName>
        <description>Internal alternative id. Not intended for display</description>
        <externalId>true</externalId>
        <label>Task Key</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Task_Name_Chain_Long__c</fullName>
        <description>This is a new field to hold task name chain. This field has same behavior as the &quot;Task Name Chain&quot; field. But the new data type (long text area) will allow name chain for larger number for project tasks in a hierarchy as compare to the old one (255 chars)</description>
        <inlineHelpText>This is a new field to hold task name chain. This field has same behavior as the &quot;Task Name Chain&quot; field. But the new data type (long text area) will allow name chain for larger number for project tasks in a hierarchy as compare to the old one (255 chars)</inlineHelpText>
        <label>Task Name Chain (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Task_Name_Chain__c</fullName>
        <description>System field showing the delimited list of Parent Task Names &apos;up the chain&apos; to the Top-level Parent Task.  Top-level Parent Tasks will have a Task Name Chain value equal to their own Name.  Their immediate child Tasks will have a Task Name Chain value equal to their own Name, then the name of their Parent Task, and so on.</description>
        <inlineHelpText>System field showing the delimited list of Parent Task Names &apos;up the chain&apos; to the Top-level Parent Task.</inlineHelpText>
        <label>Task Name Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Task_Number__c</fullName>
        <description>Internal number not intended for display</description>
        <displayFormat>{0}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Hours__c</fullName>
        <inlineHelpText>Hours spent on this task. Rolls up from task time entries on timecards.</inlineHelpText>
        <label>Timecard Hours</label>
        <summarizedField>pse__Task_Time__c.pse__Total_Hours__c</summarizedField>
        <summaryForeignKey>pse__Task_Time__c.pse__Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Top_level_Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System field which shows the top-level Parent Task (parent task&apos;s parent&apos;s parent etc.) for the current Task.  Top-level Tasks have no Parent Task or Top-level Parent Task themselves.</description>
        <inlineHelpText>System field which shows the top-level Parent Task (parent task&apos;s parent&apos;s parent etc.) for the current Task.  Top-level Tasks have no Parent Task or Top-level Parent Task themselves.</inlineHelpText>
        <label>Top-level Parent Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Project Tasks (Top-level Parent Task)</relationshipLabel>
        <relationshipName>All_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__WBS_Element_Number__c</fullName>
        <description>Work Breakdown Structure Element Number or ID.  May correspond to external Task Management system.</description>
        <inlineHelpText>Work Breakdown Structure Element Number or ID.  May correspond to external Task Management system.</inlineHelpText>
        <label>WBS Element Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The work calendar used to schedule a project task.</description>
        <inlineHelpText>The work calendar used to schedule a project task.</inlineHelpText>
        <label>Work Calendar</label>
        <referenceTo>pse__Work_Calendar__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Work_Remaining__c</fullName>
        <inlineHelpText>Amount of time needed to complete this task</inlineHelpText>
        <label>Work Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__WBS_Element_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Actual_Start_Must_Be_Before_End</fullName>
        <active>true</active>
        <description>Start date &amp; time must be before the end date &amp; time</description>
        <errorConditionFormula>pse__Actual_End_Date_Time__c &lt;  pse__Actual_Start_Date_Time__c</errorConditionFormula>
        <errorDisplayField>pse__Actual_End_Date_Time__c</errorDisplayField>
        <errorMessage>Actual Start Date &amp; Time must be before the Actual End Date &amp; Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Can_not_complete_if_not_started</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( pse__Started__c ), pse__Completed__c )</errorConditionFormula>
        <errorDisplayField>pse__Completed__c</errorDisplayField>
        <errorMessage>Can not mark as completed if not started</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__No_Negative_ETC</fullName>
        <active>true</active>
        <description>The Estimated Time To Completion cannot be negative.</description>
        <errorConditionFormula>pse__Estimated_Time_To_Completion__c &lt; 0</errorConditionFormula>
        <errorDisplayField>pse__Estimated_Time_To_Completion__c</errorDisplayField>
        <errorMessage>The Estimated Time To Completion cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Parent_Task_Project_Mismatch</fullName>
        <active>true</active>
        <description>Parent Task Project must match Task Project.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(pse__Parent_Task__c)), pse__Parent_Task__r.pse__Project__c != pse__Project__c)</errorConditionFormula>
        <errorDisplayField>pse__Parent_Task__c</errorDisplayField>
        <errorMessage>Parent Task Project must match Task Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Points_Complete_Cannot_Exceed_Points</fullName>
        <active>true</active>
        <errorConditionFormula>pse__Points_Complete__c &gt; pse__Points__c</errorConditionFormula>
        <errorDisplayField>pse__Points_Complete__c</errorDisplayField>
        <errorMessage>Points Complete cannot exceed Points</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Points_complete_can_not_be_less_0</fullName>
        <active>true</active>
        <description>Points percent compete can not be less than 0%</description>
        <errorConditionFormula>pse__Percent_Complete_Points__c &lt; 0</errorConditionFormula>
        <errorDisplayField>pse__Percent_Complete_Points__c</errorDisplayField>
        <errorMessage>Points percent complete can not be less then 0%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Points_complete_can_not_exceed_100</fullName>
        <active>true</active>
        <description>Points percent compete can not exceed 100%</description>
        <errorConditionFormula>pse__Percent_Complete_Points__c &gt;1</errorConditionFormula>
        <errorDisplayField>pse__Percent_Complete_Points__c</errorDisplayField>
        <errorMessage>Points percent complete can not exceed 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Milestone_Mismatch</fullName>
        <active>true</active>
        <description>Milestone Project must match Task Project.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Milestone__c)),(pse__Milestone__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Milestone__r.pse__Project__c)),(pse__Milestone__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Milestone__r.pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Milestone__c</errorDisplayField>
        <errorMessage>Milestone Project must match Task Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Start_Must_Be_Before_End</fullName>
        <active>true</active>
        <description>Start date &amp; time must be before the end date &amp; time</description>
        <errorConditionFormula>pse__End_Date_Time__c &lt;  pse__Start_Date_Time__c</errorConditionFormula>
        <errorDisplayField>pse__End_Date_Time__c</errorDisplayField>
        <errorMessage>Start date &amp; time must be before the end date &amp; time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Task_Key_Constant</fullName>
        <active>true</active>
        <description>The Task Key field cannot be changed</description>
        <errorConditionFormula>AND(ISCHANGED(pse__Task_Key__c),  NOT(ISBLANK(PRIORVALUE(pse__Task_Key__c))))</errorConditionFormula>
        <errorDisplayField>pse__Task_Key__c</errorDisplayField>
        <errorMessage>The Task Key field cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Task_Project_is_Required_and_Constant</fullName>
        <active>true</active>
        <description>A Task&apos;s Project field value may not be blank initially if it is a top-level Task (if child task, Project will be auto-set from parent) and may not be updated once set.</description>
        <errorConditionFormula>OR(AND(OR(ISNULL(pse__Parent_Task__c),(pse__Parent_Task__c=&apos;&apos;)),OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;))),ISCHANGED(pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>A Task&apos;s Project field value may not be blank initially if it is a top-level Task (if child task, Project will be auto-set from parent) and may not be updated once set.</errorMessage>
    </validationRules>
</CustomObject>